crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_lambda.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> i64 {
  bb0:
    v0 = closure_alloc f1
    v1 = const_i64 10
    v2 = call_indirect v0(v1)
    return v2
}

func @__closure_0(x: i64) -> i64 {
  bb0(v0: i64):
    v1 = const_i64 1
    v2 = iadd v0, v1
    return v2
}
