crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_lambda_with_captures.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> string {
  bb0:
    v0 = const_string "hello"
    v1 = closure_alloc f1(v0)
    v2 = call_indirect v1()
    return v2
}

func @__closure_0(__env: closure() -> string) -> string {
  bb0(v0: closure() -> string):
    v1 = closure_load_capture v0[0]
    return v1
}
