crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_mutable_variable.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> i64 {
  bb0:
    v0 = const_i64 10
    v1 = alloca i64
    store v1, v0
    v2 = const_i64 20
    store v1, v2
    v3 = load v1
    return v3
}
